# rust_demo

./: Cargo.toml  libcrate_test.rlib
src/: crate_test.rs  foo.rs  lib.rs  main.bc  main.ll  main.rs  raii.rs
