[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Crates.io
# cargo get lastest from registry
[dependencies]
rand = "0.8.5"
